--- a/package.json
+++ b/package.json
@@ -3,6 +3,10 @@
   "private": true,
   "version": "0.0.0",
   "type": "module",
+  "author": {
+    "name": "Your Name",
+    "email": "prateekv2003@gmail.com"
+  },
   "scripts": {
     "dev": "vite",
     "build": "tsc && vite build",
